--- a/res/layout/fragment_cloud_detail.xml
+++ b/res/layout/fragment_cloud_detail.xml
@@ -6,10 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.assignment10final.CloudIntroActivity$PlaceholderFragment" >
+    tools:context="com.example.assignment10final.CloudDetailActivity$PlaceholderFragment" >
+
 
     <TextView
-        android:id="@+id/textview_intro"
+        android:id="@+id/textview_conditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
