--- a/res/layout/fragment_cloud_detail.xml
+++ b/res/layout/fragment_cloud_detail.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,11 +8,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.assignment10final.CloudDetailActivity$PlaceholderFragment" >
 
-
-    <TextView
-        android:id="@+id/textview_conditions"
+    <LinearLayout
+        android:id="@+id/layout_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="vertical" >
+      
+        <TextView
+            android:id="@+id/textview_sighting_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             />
+       
+       <TextView
+            android:id="@+id/textview_conditions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fetching_conditions" />
+    </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
