--- a/res/layout/fragment_cloud_detail.xml
+++ b/res/layout/fragment_cloud_detail.xml
@@ -20,11 +20,34 @@
             android:layout_height="wrap_content"
              />
        
+        <EditText
+            android:id="@+id/edittext_sighting_desc"
+	        style="@style/base_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/sighting_desc_hint" />
+        
        <TextView
             android:id="@+id/textview_conditions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/fetching_conditions" />
+       
+
+        <Button
+            android:id="@+id/button_launch_camera"
+	        android:background="@color/med_grey"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/change_cloud_image" />
+
+        <ImageView
+            android:id="@+id/imageview_cloud_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/cloud_image" />       
     </LinearLayout>
 
 </ScrollView>
