--- a/res/layout/fragment_cloud_list.xml
+++ b/res/layout/fragment_cloud_list.xml
@@ -9,30 +9,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
         android:text="@string/how_to" />
 
-    <!--  note: we're providing a pretty hefty margin here so the 
+    <!--
+    note: we're providing a pretty hefty margin here so the 
     last itme doesn't get swallowed up by the delete button when we 
-    have to scroll -->
+    have to scroll
+    -->
+
     <ListView
         android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-		android:layout_marginTop="5dp"
-		android:layout_marginBottom="65dp"
         android:layout_below="@+id/textview_list_summary"
-        android:layout_centerHorizontal="true" >
-
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="65dp"
+        android:layout_marginTop="5dp" >
     </ListView>
 
-    <Button
-        android:id="@+id/button_delete_selected"
+    <LinearLayout
+        android:id="@+id/layout_button_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="@string/delete_sighting" />
-    
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/button_show_map"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/med_grey"
+            android:layout_marginBottom="5dp"
+            android:text="@string/show_on_map" />
+
+        <Button
+            android:id="@+id/button_delete_selected"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/med_grey"
+            android:text="@string/delete_sighting" />
+    </LinearLayout>
+
 </RelativeLayout>
