--- a/res/layout/list_item_cloud_sighting.xml
+++ b/res/layout/list_item_cloud_sighting.xml
@@ -2,24 +2,54 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="5dp"
     android:padding="10dp"
-    android:paddingBottom="10dp" >
-    
-    <TextView
-        android:id="@+id/textview_cloud_sighting_info"
-        style="@style/base_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:drawablePadding="10dp"
-        android:textStyle="bold" >
-    </TextView>
-    
+    android:paddingBottom="10dp"
+    android:paddingLeft="5dp" >
+
+    <LinearLayout
+        android:id="@+id/layout_cloud_item_container"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imageview_cloud_list_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/cloud_image"
+            android:src="@drawable/cloud_default"
+            android:layout_marginRight="10dp"
+            android:maxWidth="150dp" />
+
+        <LinearLayout
+            android:id="@+id/layout_button_container"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textview_cloud_sighting_loc"
+                style="@style/base_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawablePadding="10dp"
+                android:textStyle="bold" >
+            </TextView>
+
+            <TextView
+                android:id="@+id/textview_cloud_sighting_date"
+                style="@style/base_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+            </TextView>
+        </LinearLayout>
+    </LinearLayout>
+
     <CheckBox
         android:id="@+id/check_cloud_sighting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-			 />
-    
+        android:paddingLeft="10dp"
+        android:layout_alignParentRight="true" />
+
 </RelativeLayout>
