--- a/res/layout/fragment_cloud_detail.xml
+++ b/res/layout/fragment_cloud_detail.xml
@@ -48,6 +48,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/cloud_image" />       
+            
+
+
+        <ImageView
+            android:id="@+id/imageview_wunderground_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:src="@drawable/wunderground_logo"
+            android:contentDescription="@string/wunderground" />    
+            
+        <TextView
+            android:id="@+id/textview_wunderground_thanks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wunderground" />   
+                    
     </LinearLayout>
 
 </ScrollView>
